# ccglib_blas_comparison

./: CMakeLists.txt  README.md
include/: config.h
src/: ccglib.cpp  cublas.cu  hipblas.cpp  rocblas.cpp
